; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_geckousb.c___usb_flush.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_geckousb.c___usb_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXI_DEVICE_0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @__usb_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__usb_flush(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @EXI_DEVICE_0, align 4
  %6 = call i32 @EXI_Lock(i32 %4, i32 %5, i32* null)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %18

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %14, %9
  %11 = load i32, i32* %2, align 4
  %12 = call i64 @__usb_recvbyte(i32 %11, i8* %3)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  br label %10

15:                                               ; preds = %10
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @EXI_Unlock(i32 %16)
  br label %18

18:                                               ; preds = %15, %8
  ret void
}

declare dso_local i32 @EXI_Lock(i32, i32, i32*) #1

declare dso_local i64 @__usb_recvbyte(i32, i8*) #1

declare dso_local i32 @EXI_Unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
